# simple-mail

./: .gitattributes  .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.js
.claude/: settings.json  settings.local.json
.claude/.claude/: settings.local.json
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: release.yml
scripts/: sync-version.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autodiscover.rs  caldav_client.rs  carddav_client.rs  crypto.rs  dav_server.rs  db.rs  identity.rs  imap_client.rs  lib.rs  main.rs  offline_download.rs  smtp_client.rs  sync_state.rs
src/lib/: eventAlerts.ts  networkActivity.svelte.ts  searchQuery.ts  types.ts  utils.ts
src/lib/components/: CalendarView.svelte  CommandBar.svelte  ComposePane.svelte  ContactsView.svelte  DatePicker.svelte  FolderModal.svelte  FolderPane.svelte  MessageList.svelte  NavigationRail.svelte  ReadingPane.svelte  SettingsView.svelte  TimePicker.svelte  TitleBar.svelte
src/lib/data/: dataService.ts  mockData.ts
src/lib/i18n/: de.json  en.json  es.json  fr.json  index.svelte.ts  it.json  ja.json  ko.json  zh-CN.json  zh-TW.json
src/lib/utils/: attachments.ts
src/routes/: +layout.svelte  +page.svelte
